# parallel-requests

./: .coverage  .gitignore  .pdm-python  404.html  CHANGELOG.md  PRD.md  PROJECT.md  README.md  coverage.json  index.html  objects.inv  pyproject.toml  sitemap.xml  stderr
.github/workflows/: ci.yml  docs.yml  publish.yml  version-bump.yml
docs/: .gitignore  mkdocs.yml
docs/docs/: index.md
docs/docs/explanation/: architecture.md  backends.md  index.md  proxy-rotation.md  rate-limiting.md  retry-strategy.md
docs/docs/how-to-guides/: debug-issues.md  handle-cookies.md  handle-retries.md  index.md  limit-request-rate.md  make-parallel-requests.md  post-json-data.md  select-backend.md  stream-large-files.md  use-proxies.md
docs/docs/reference/: backend.md  configuration.md  exceptions.md  header-management.md  index.md  proxy-rotation.md  rate-limiting.md  retry-strategy.md  return-types.md  validation.md
docs/docs/tutorials/: getting-started.md  handling-errors.md  index.md  parallel-fundamentals.md
examples/: .env.example  01-basic-requests.py  02-concurrency-tuning.py  03-rate-limiting.py  04-retry-configuration.py  05-proxy-rotation.py  06-user-agent-rotation.py  07-post-json-data.py  08-streaming-downloads.py  09-error-handling.py  10-backend-selection.py  11-http2-usage.py  12-response-parsing.py  13-context-manager.py  14-async-usage.py  15-cookie-management.py  16-keyed-responses.py  17-graceful-failure.py  README.md  requirements.txt
explanation/: index.html
explanation/architecture/: index.html
explanation/backends/: index.html
explanation/proxy-rotation/: index.html
explanation/rate-limiting/: index.html
explanation/retry-strategy/: index.html
how-to-guides/: index.html
how-to-guides/debug-issues/: index.html
how-to-guides/handle-cookies/: index.html
how-to-guides/handle-retries/: index.html
how-to-guides/limit-request-rate/: index.html
how-to-guides/make-parallel-requests/: index.html
how-to-guides/post-json-data/: index.html
how-to-guides/select-backend/: index.html
how-to-guides/stream-large-files/: index.html
how-to-guides/use-proxies/: index.html
openspec/: IMPLEMENTATION_PLAN.md  project.md
openspec/changes/add-backends/: proposal.md  tasks.md
openspec/changes/add-client-api/: design.md  proposal.md  tasks.md
openspec/changes/add-core-utils/: proposal.md  tasks.md
openspec/specs/ci-cd/: spec.md
reference/: index.html
reference/backend/: index.html
reference/configuration/: index.html
reference/exceptions/: index.html
reference/header-management/: index.html
reference/proxy-rotation/: index.html
reference/rate-limiting/: index.html
reference/retry-strategy/: index.html
reference/return-types/: index.html
reference/validation/: index.html
search/: search_index.json
src/async_requests/: __init__.py  async_requests.py  config.py  utils.py
src/fastreq/: __init__.py  client.py  config.py  exceptions.py
src/parallel_requests/: __init__.py  _async_requests.py  _parallel_requests.py  client.py  config.py  constants.py  exceptions.py  parallel_requests.py  parallel_requests_aiohttp.py  parallel_requests_asyncer.py  parallel_requests_niquests.py  utils.py
tests/: test_parallel_requests.py
tests/backends/: test_aiohttp.py  test_aiohttp_errors.py  test_httpx.py  test_niquests.py  test_niquests_errors.py  test_requests.py  test_requests_errors.py
tests/unit/: test_backends.py  test_client.py  test_concurrency.py  test_config.py  test_exceptions.py  test_headers.py  test_logging.py  test_optional_backend_imports.py  test_proxies.py  test_rate_limiter.py  test_retry.py  test_validators.py
tutorials/: index.html
tutorials/getting-started/: index.html
tutorials/handling-errors/: index.html
tutorials/parallel-fundamentals/: index.html
(+113 files in other folders)
