# [tool.poetry]
# name = "parallel-requests"
# version = "0.2.3"
# description = ""
# authors = ["Volker Lorrmann <volker.lorrmann@gmail.com>"]
# readme = "README.md"
# packages = [{ include = "parallel_requests", from = "src" }]

# [tool.poetry.dependencies]
# python = "^3.10"
# asyncio = "^3.4.3"
# pandas = "^2.0.0"
# requests = "^2.28.2"
# python-dotenv = "^1.0.0"
# asyncer = "^0.0.2"
# loguru = "^0.6.0"
# tqdm = "^4.65.0"
# numpy = "^1.24.2"
# aiohttp = "^3.8.4"



[tool.pdm.build]
includes = [
    "src/parallel_requests",
]

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.23.0",
    "black>=24.4.0",
    "ruff>=0.3.7",
    "isort>=5.13.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Volker Lorrmann", email = "volker.lorrmann@gmail.com"},
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "asyncio>=3.4.3",
    "pandas>=2.0.0",
    "requests>=2.28.2",
    "python-dotenv>=1.0.0",
    "asyncer>=0.0.2",
    "loguru>=0.6.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.2",
    "niquests>=3.5.5",
]
name = "parallel-requests"
version = "0.2.6"
description = ""
readme = "README.md"
