[project]
name = "parallel-requests"
version = "0.2.6"
description = "Fast parallel HTTP requests"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Volker Lorrmann", email = "volker.lorrmann@gmail.com"},
]
dependencies = [
    "asyncio>=3.4.3",
    "pandas>=2.0.0",
    "requests>=2.28.2",
    "python-dotenv>=1.0.0",
    "asyncer>=0.0.2",
    "loguru>=0.6.0",
    "tqdm>=4.65.0",
    "niquests>=3.5.5",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.23.0",
    "black>=24.4.0",
    "ruff>=0.3.7",
    "isort>=5.13.2",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parallel_requests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
