[project]
name = "parallel-requests"
version = "2.0.0"
description = "Fast parallel HTTP requests with asyncio, retry logic, proxy rotation, and rate limiting"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Volker Lorrmann", email = "volker.lorrmann@gmail.com"},
]
 dependencies = [
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
niquests = ["niquests>=3.6.0"]
aiohttp = ["aiohttp>=3.9.0"]
requests = ["requests>=2.31.0"]
all = ["niquests>=3.6.0", "aiohttp>=3.9.0", "requests>=2.31.0"]
dev = [
    "ipython>=8.23.0",
    "black>=24.4.0",
    "ruff>=0.3.7",
    "isort>=5.13.2",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.5",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.25.0",
    "mkdocstrings-python>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parallel_requests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
